<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">lookFor</string>
    <string name="my_message">我的信息</string>
    <string name="my_friend">我的好友</string>
    <string name="my_circles">我的圈圈</string>
    <string name="my_request">我的申请</string>
    <string name="setting">设置</string>
    <string name="about_us">关于我们</string>
    <string name="version_update">版本更新</string>
    <string name="contacts_friend">通讯录好友</string>
    <string name="find_friend">查找好友</string>
    <string name="travel">安心出行</string>
    <string name="power">电量</string>
    <string name="signal">信号</string>
    <string name="speed">速度</string>
    <string name="enclosure">电子围栏</string>
    <string name="login">登录</string>
    <string name="cancal">取消</string>
    <string name="register">注册</string>
    <string name="register_new">注册新用户</string>
    <string name="input_mobilenumber">输入手机号码</string>
    <string name="input_password">输入密码</string>
    <string name="input_code">输入验证码</string>
    <string name="forget_password">忘记密码</string>
    <string name="send">发送</string>
    <string name="resend">重发(</string>
    <string name="resend_second">秒)</string>
    <string name="phone_num_lack">请输入11位手机号！</string>
    <string name="complete">完成</string>
    <string name="modify_pwd">修改密码</string>
    <string name="modify_moblie">修改手机号</string>
    <string name="enter_nickname">输入昵称</string>
    <string name="determine">确定</string>
    <string name="hint_nickname">给自己取个美妙的名字吧</string>
    <string name="mobilenumber">手机号</string>
    <string name="nickname">名字</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="modify_data">修改资料</string>
    <string name="save">保存</string>
    <string name="confirmation">确认选点</string>
    <string name="select_friend">选择好友</string>
    <string name="img_from_camera">拍照上传</string>
    <string name="img_from_local">手机相册上传</string>
    <string name="clear">清空</string>
    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>
    <string name="click_on_login">点击登录</string>
    <string name="map_exhibition">地图展示方式</string>
    <string name="eyes_power">闭眼权限设置</string>
    <string name="commonly_address">常用地址</string>
    <string name="add_default_contact">添加默认联系人</string>
    <string name="sign_out">退出</string>
    <string name="map_mode">地图模式</string>
    <string name="satellite_mode">卫星模式</string>
    <string name="default_contact">默认联系人</string>
    <string name="addfirend">添加好友</string>
    <string name="addfirend_success">添加好友成功</string>
    <string name="addfirend_failure">添加好友失败</string>
    <string name="hint_addfirend">手机号/昵称</string>
    <string name="convene">召集</string>
    <string name="convene_address">召集目的地</string>
    <string name="build_convene">创建召集</string>
    <string name="want_talk">我想说的什么.....</string>

</resources>