<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_home"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/title" >

        <Button
            android:id="@+id/btn_login_cancal"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:text="@string/cancal"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_login_register"
            android:layout_width="95dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:text="@string/register_new"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_login_mobilenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/input_mobilenumber"
            android:padding="15dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/divider_line" />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/input_password"
            android:padding="15dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_3"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_login_forget"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="5dp"
        android:background="@null"
        android:text="@string/forget_password"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

</LinearLayout>