<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/title" >

        <Button
            android:id="@+id/btn_addfriend_cancal"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:text="@string/cancal"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/addfirend"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_addfriend_determine"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:text="@string/determine"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_addfriend_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:hint="@string/hint_addfirend"
        android:inputType="text"
        android:maxLength="16"
        android:padding="15dp"
        android:textSize="15sp" />

</LinearLayout>