<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/divider_line" />

    <TextView
        android:id="@+id/setting"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16.0dip"
        android:gravity="center|left"
        android:text="@string/setting"
        android:textSize="18.0sp" />

    <TextView
        android:id="@+id/about_us"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16.0dip"
        android:gravity="center|left"
        android:text="@string/about_us"
        android:textSize="18.0sp" />

    <TextView
        android:id="@+id/version_update"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16.0dip"
        android:gravity="center|left"
        android:text="@string/version_update"
        android:textSize="18.0sp" />

</LinearLayout>