<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/title" >

        <Button
            android:id="@+id/btn_modifymoblie_cancal"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:text="@string/cancal"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/modify_moblie"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_modifymoblie_complete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:text="@string/complete"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_modifymoblie_mobilenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/input_mobilenumber"
            android:inputType="numberSigned"
            android:padding="15dp"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/divider_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_modifymoblie_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_code"
                android:inputType="numberSigned"
                android:padding="15dp"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/black" />

            <Button
                android:id="@+id/btn_modifymoblie_send"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@null"
                android:text="@string/send"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>