<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_photo_camera"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_btn"
        android:gravity="center"
        android:text="@string/img_from_camera"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_photo_local"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_btn"
        android:gravity="center"
        android:text="@string/img_from_local"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_photo_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_2"
        android:gravity="center"
        android:text="@string/cancal"
        android:textColor="@android:color/white" />

</LinearLayout>